--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mango-link-tracker
     env: node
     plan: free
-    buildCommand: npm install && pip install -r requirements.txt
+    buildCommand: npm install && (pip install -r requirements.txt || pip3 install -r requirements.txt)
     startCommand: npm start
     envVars:
       - key: DB_HOST
