--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
     name: mango-link-tracker
     env: node
     plan: free
-    buildCommand: npm install && (pip install -r requirements.txt || pip3 install -r requirements.txt)
-    startCommand: npm start
+    region: ohio
+    buildCommand: npm install && pip install requests
+    startCommand: node server.js
     envVars:
       - key: DB_HOST
         sync: false
